Change default config to use newly added secret directory

--- a/default_config.ini
+++ b/default_config.ini
@@ -4,7 +4,13 @@
 
 [general]
 # filepath to API token
-key_file = secret.key
+key_file = secret/secret.key
+
+# filepath to secret admin key
+admin_key_file = secret/admin.key
+
+# filepath to admin database
+admin_db_file = secret/admins.txt
 
 
 [files]
