--- a/default_config.ini
+++ b/default_config.ini
@@ -18,16 +18,16 @@ admin_db_file = secret/admins.txt
 workdir = ./data
 
 # individual file names
-file_points = data/pointinator.txt
-bak1_points = data/pointinator.bak1.txt
-bak2_points = data/pointinator.bak2.txt
-bak3_points = data/pointinator.bak3.txt
-file_queue = data/queue.txt
-bak1_queue = data/queue.bak1.txt
-bak2_queue = data/queue.bak2.txt
-bak3_queue = data/queue.bak3.txt
-file_params = data/params.txt
-file_log = data/discord.log
+file_points = pointinator.txt
+bak1_points = pointinator.bak1.txt
+bak2_points = pointinator.bak2.txt
+bak3_points = pointinator.bak3.txt
+file_queue = queue.txt
+bak1_queue = queue.bak1.txt
+bak2_queue = queue.bak2.txt
+bak3_queue = queue.bak3.txt
+file_params = params.txt
+file_log = discord.log
 
 
 [channels]
