add info and points fields

--- a/default_config.ini
+++ b/default_config.ini
@@ -53,7 +53,7 @@ default =
     PvP
     Atoraxxion
     Othergaming
-    Black Shrin
+    Black Shrine
 
 # roles for server `Ghandi`
 ghandi =
@@ -66,3 +66,18 @@ ghandi =
     PvP
     BossBlizz
 
+
+[info]
+# what to print when `info` is sent
+info =
+    *About*: Send commands by chatting in this channel. Send a command every time someone does something that earns points. Issue `points` to see qualifying activities.
+    *Usage*: Add points with `a <participant> <points>`. The *participant* can be a nickname if they're already on the board. For a full list of commands, issue `help`. For detailed usage, see the guide at <https://goodluck.servegame.com/index.php/how-to-pointinate/>.
+    *Privileges*: Officers' commands will be executed by the bot immediately. Please type deliberately. If you're not an officer, then your command will be put in the queue for an officer to approve.
+    *Support*: Pointinator goes down for nightly maint around 4:00 GMT/BST. If it's down outside of those times, contact Aisi Yidingbai. Pointinator is open-source software available at <https://github.com/AisiYidingbai/pointinator>.
+# what to print when `points` is sent
+points =
+    **Guild missions**: 1 point per 20 mil silver reward
+    **Attending guildbosses**: 2 points
+    **Participating in Guild League**: 3 points
+    **Winning in Guild League**: 4 points
+    **Depositing a [Guild] Steel Candidum Shell**: 10 points
